--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "debug": "~2.2.0",
     "execon": "~1.2.0",
-    "pipe-io": "~1.2.0"
+    "pullout": "^1.0.1"
   },
   "devDependencies": {},
   "scripts": {
