--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "github authorization",
   "main": "lib/faust.js",
   "dependencies": {
-    "debug": "~2.2.0",
+    "debug": "^2.3.0",
     "execon": "~1.2.0",
     "pullout": "^1.0.1"
   },
